--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,12 @@
 
 header {
     background-color: #504b4b;
-    background-size: cover;
     overflow: hidden;
     padding: 20px 0;
 }
 nav{
-    width: 80%;
+    width: 960px;
+    height: 70px;
     margin: auto;
 }
 nav a {
@@ -19,25 +19,57 @@ nav a {
     color: aliceblue;
 }
 nav img {
-    width: calc((100% - 30px) / 5);
+    /* margin-right: 5px; */
     float: left;
-    margin-right: 5px;
-}
-nav ul {
-    position: relative;
+    width: 200px;
     height: 70px;
 }
+
 nav li {
-    width: calc((100% - 30px) / 5);
+    /* width: calc((100% - 30px) / 5); */
+    /* margin-right: 5px; */
     float: left;
     text-align: center;
-    padding: 35px 0;
-    margin-right: 5px;
+    width: 190px;
+    height: 70px;
+    padding: 35px 0px;
 }
 nav li:hover{
     background-color: black;
     cursor:pointer;
 }
-nav p {
+/* nav p {
     clear: both;
+} */
+main {
+    width: 960px;
+    margin: auto;
+}
+main :first-child img {
+    margin: 30px 0 30px 0;
+    width: 100%;
+}
+main :nth-child(2){
+    overflow: hidden;
+}
+main :nth-child(2) :nth-child(1){
+    margin: 0 30px 30px 0;
+    width: 300px;
+    height: 375px;
+    display: block;
+    float: left;
+}
+main :nth-child(2) :nth-child(2){
+    margin: 0 30px 30px 0;
+    width: 300px;
+    height: 375px;
+    display: block;
+    float: left;
+}
+main :nth-child(2) :nth-child(3){
+    margin: 0px 0px 30px 0;
+    width: 300px;
+    height: 375px;
+    display: block;
+    float: left;
 }
